Saving and restoring main window size
Added application setting for FormMain window size.
All application settings are loaded when Program starts and saved when Program exits.

--- a/BootCamp/Properties/Settings.settings
+++ b/BootCamp/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="FormAdd_LastSelectedEnvironment" Type="System.String" Scope="User">
       <Value Profile="(Default)">Windows</Value>
     </Setting>
+    <Setting Name="FormMain_WindowSize" Type="System.Drawing.Size" Scope="User">
+      <Value Profile="(Default)">668, 362</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
