--- a/BootCamp/app.config
+++ b/BootCamp/app.config
@@ -23,6 +23,9 @@
             <setting name="FormAdd_LastSelectedEnvironment" serializeAs="String">
                 <value>Windows</value>
             </setting>
+            <setting name="FormMain_WindowSize" serializeAs="String">
+                <value>668, 362</value>
+            </setting>
         </BootCamp.Properties.Settings>
     </userSettings>
 </configuration>
