--- a/BootCamp/BootCamp.csproj
+++ b/BootCamp/BootCamp.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlphabeticGrouper.cs" />
     <Compile Include="EnvironmentManager.cs" />
     <Compile Include="FormAddGame.cs">
       <SubType>Form</SubType>
