Saved list of favorites as user setting

--- a/BootCamp/app.config
+++ b/BootCamp/app.config
@@ -26,6 +26,12 @@
             <setting name="FormMain_WindowSize" serializeAs="String">
                 <value>668, 362</value>
             </setting>
+            <setting name="FavoritesList" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+                </value>
+            </setting>
         </BootCamp.Properties.Settings>
     </userSettings>
 </configuration>
