Added hashing function for games
Games are equal when the following members are equal:
 - Name
 - Executable filename
 - Environment

--- a/BootCampTests/BootCampTests.csproj
+++ b/BootCampTests/BootCampTests.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Favorites.cs" />
     <Compile Include="AlphabeticGrouperTests.cs" />
+    <Compile Include="GamesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
