[boot-30] Created basic ListFilter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(sources
 	${source_dir}/controller.cpp
 	${source_dir}/commandhandler.cpp
 	${source_dir}/launcher.cpp
+	${source_dir}/listfilter.cpp
 )
 
 set(tests_dir ${PROJECT_SOURCE_DIR}/tests)
@@ -16,6 +17,7 @@ set(test_sources
 	${tests_dir}/GameTests.cpp
 	${tests_dir}/ControllerTests.cpp
 	${tests_dir}/CommandHandlerTests.cpp
+	${tests_dir}/ListFilterTests.cpp
 )
 
 # Build and run unit tests
