[boot-39] Added gflags include and link commands to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,14 +32,17 @@ set(GTEST_DIR ${PROJECT_SOURCE_DIR}/dependencies/gmock/gtest)
 set(GMOCK_INCLUDE_DIR ${GMOCK_DIR}/include)
 set(GTEST_INCLUDE_DIR ${GTEST_DIR}/include)
 include_directories(${GMOCK_DIR} ${GTEST_DIR} ${GMOCK_INCLUDE_DIR} ${GTEST_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/../src)
+link_directories(${PROJECT_SOURCE_DIR}/dependencies/gflags-2.0/.libs)
 add_executable(tests ${test_sources} ${sources} ${GMOCK_DIR}/src/gmock-all.cc ${GMOCK_DIR}/gtest/src/gtest-all.cc)
 add_custom_command(TARGET tests POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CURSES_DIR}/bin/pdcurses.dll" "${CMAKE_CURRENT_BINARY_DIR}/pdcurses.dll")
 add_custom_command(TARGET tests POST_BUILD COMMAND tests)
-target_link_libraries(tests pdcurses.lib)
+target_link_libraries(tests pdcurses.lib libgflags.a)
 
 # Build core library
 set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
 include_directories(${PROJECT_SOURCE_DIR}/src)
+include_directories(${PROJECT_SOURCE_DIR}/dependencies/gflags-2.0/src)
+link_directories(${PROJECT_SOURCE_DIR}/dependencies/gflags-2.0/.libs)
 add_executable(core ${source_dir}/main.cpp ${sources})
 add_custom_command(TARGET core POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CURSES_DIR}/bin/pdcurses.dll" "${CMAKE_CURRENT_BINARY_DIR}/pdcurses.dll")
-target_link_libraries(core pdcurses.lib)
+target_link_libraries(core pdcurses.lib libgflags.a)
