--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,11 @@ set(test_sources
 	${tests_dir}/ListFilterTests.cpp
 )
 
+# PDCurses
+set(CURSES_DIR ${PROJECT_SOURCE_DIR}/dependencies/pdcurses)
+include_directories(${CURSES_DIR}/include)
+link_directories(${CURSES_DIR}/lib)
+
 # Build and run unit tests
 set(GMOCK_DIR ${PROJECT_SOURCE_DIR}/dependencies/gmock)
 set(GTEST_DIR ${PROJECT_SOURCE_DIR}/dependencies/gmock/gtest)
@@ -28,11 +33,13 @@ set(GMOCK_INCLUDE_DIR ${GMOCK_DIR}/include)
 set(GTEST_INCLUDE_DIR ${GTEST_DIR}/include)
 include_directories(${GMOCK_DIR} ${GTEST_DIR} ${GMOCK_INCLUDE_DIR} ${GTEST_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/../src)
 add_executable(tests ${test_sources} ${sources} ${GMOCK_DIR}/src/gmock-all.cc ${GMOCK_DIR}/gtest/src/gtest-all.cc)
+add_custom_command(TARGET tests POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CURSES_DIR}/bin/pdcurses.dll" "${CMAKE_CURRENT_BINARY_DIR}/pdcurses.dll")
 add_custom_command(TARGET tests POST_BUILD COMMAND tests)
-target_link_libraries(tests libpdcurses.a)
+target_link_libraries(tests pdcurses.lib)
 
 # Build core library
 set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
 include_directories(${PROJECT_SOURCE_DIR}/src)
 add_executable(core ${source_dir}/main.cpp ${sources})
-target_link_libraries(core libpdcurses.a)
+add_custom_command(TARGET core POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CURSES_DIR}/bin/pdcurses.dll" "${CMAKE_CURRENT_BINARY_DIR}/pdcurses.dll")
+target_link_libraries(core pdcurses.lib)
