Added missing curses binary files & fixed .gitignore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ set(GTEST_INCLUDE_DIR ${GTEST_DIR}/include)
 include_directories(${GMOCK_DIR} ${GTEST_DIR} ${GMOCK_INCLUDE_DIR} ${GTEST_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/../src)
 link_directories(${PROJECT_SOURCE_DIR}/dependencies/gflags-2.0/.libs)
 add_executable(tests ${test_sources} ${sources} ${GMOCK_DIR}/src/gmock-all.cc ${GMOCK_DIR}/gtest/src/gtest-all.cc)
-add_custom_command(TARGET tests POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CURSES_DIR}/bin/pdcurses.dll" "${CMAKE_CURRENT_BINARY_DIR}/pdcurses.dll")
+add_custom_command(TARGET tests POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CURSES_DIR}/bin/curses2.dll" "${CMAKE_CURRENT_BINARY_DIR}/curses2.dll")
 add_custom_command(TARGET tests POST_BUILD COMMAND tests)
 target_link_libraries(tests pdcurses.lib libgflags.a)
 
@@ -44,5 +44,5 @@ include_directories(${PROJECT_SOURCE_DIR}/src)
 include_directories(${PROJECT_SOURCE_DIR}/dependencies/gflags-2.0/src)
 link_directories(${PROJECT_SOURCE_DIR}/dependencies/gflags-2.0/.libs)
 add_executable(core ${source_dir}/main.cpp ${sources})
-add_custom_command(TARGET core POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CURSES_DIR}/bin/pdcurses.dll" "${CMAKE_CURRENT_BINARY_DIR}/pdcurses.dll")
+add_custom_command(TARGET core POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CURSES_DIR}/bin/curses2.dll" "${CMAKE_CURRENT_BINARY_DIR}/curses2.dll")
 target_link_libraries(core pdcurses.lib libgflags.a)
