--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(source_dir ${PROJECT_SOURCE_DIR}/src)
 set(sources
 	${source_dir}/Game.cpp
 	${source_dir}/GameController.cpp
+	${source_dir}/PlatformController.cpp
 	${source_dir}/commandhandler.cpp
 	${source_dir}/launcher.cpp
 	${source_dir}/listfilter.cpp
@@ -17,6 +18,7 @@ set(test_sources
 	${tests_dir}/main.cpp
 	${tests_dir}/GameTests.cpp
 	${tests_dir}/GameControllerTests.cpp
+	${tests_dir}/PlatformControllerTests.cpp
 	${tests_dir}/CommandHandlerTests.cpp
 	${tests_dir}/ListFilterTests.cpp
 )
